<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rasd_gridmap</name>
  <version>0.0.1</version>
  <description>Converts real-time LiDAR or ROI-filtered PointCloud2 into 2.5D grid maps for the RASD project.</description>

  <maintainer email="rasd@psu.edu.sa">RASD Team</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>

  <!-- Optional: linting (you can keep or remove) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

